fix: x-cloak to prevent content shift

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -58,6 +58,10 @@ p {
   }
 }
 
+[x-cloak] {
+  display: none;
+}
+
 /* Syntax Highlighting*/
 
 body :not(pre) > code[class*="language-"],
